# mcp-registry-client

./: .gitignore  .markdownlint-cli2.yaml  AGENT.md  AGENTS.md  CODE_OF_CONDUCT.MD  README.md  config.toml.example  main.py  mkdocs.yml  noxfile.py  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: dependency-submission.yml  docs.yml
.specify/memory/: constitution.md
agent notes/: progress-2.md  progress-5.md
agent-notes/: MCP Registry Client Implementation Plan.md  progress-1.md  progress-3.md  progress-4.md  progress-6.md  progress-7.md  project_history_summary.md
docs/: CONTRIBUTING.md  __init__.py  changelog.md  cli.md  development-troubleshooting.md  error-handling.md  gen_ref_pages.py  index.md  installation.md  quickstart.md  testing-patterns.md  troubleshooting.md
mcp_registry_client/: __init__.py  cache.py  cli.py  client.py  config.py  constants.py  error_handling.py  formatters.py  models.py  retry.py  validation.py
mcp_registry_client/commands/: __init__.py  base.py  info.py  search.py
specs/001-add-feature-s/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/001-add-feature-s/contracts/: claude-mcp-tools.json
tests/: __init__.py  test_cache.py  test_cli.py  test_client.py  test_commands.py  test_models.py  test_validation.py
tests/integration/: __init__.py  conftest.py  test_cli_integration.py  test_real_api.py
tests/performance/: __init__.py  test_cache_performance.py  test_client_performance.py  test_retry_performance.py
